deploy/base/redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  labels:
    app: redis
    app.kubernetes.io/name: redis
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: redis
      app.kubernetes.io/name: redis
  template:
    metadata:
      labels:
        app: redis
        app.kubernetes.io/name: redis
    spec:
      containers:
        - name: redis
          image: docker.io/library/redis
          command:
            - redis-server
            - --requirepass
            - $(MISP_REDIS_PASSWORD)
            - --maxmemory
            - 256mb
            - --maxmemory-policy
            - noeviction
            - --save
            - ""
            - --appendonly
            - "no"
          ports:
            - name: redis
              containerPort: 6379
              protocol: TCP
          resources:
            requests:
              cpu: 10m
              memory: 64Mi
            limits:
              cpu: 1000m
              memory: 384Mi
          startupProbe:
            exec:
              command: ["redis-cli", "-a", "$(MISP_REDIS_PASSWORD)", "--no-auth-warning", "ping"]
            failureThreshold: 10
            periodSeconds: 3
          readinessProbe:
            exec:
              command: ["redis-cli", "-a", "$(MISP_REDIS_PASSWORD)", "--no-auth-warning", "ping"]
            periodSeconds: 10
          livenessProbe:
            exec:
              command: ["redis-cli", "-a", "$(MISP_REDIS_PASSWORD)", "--no-auth-warning", "ping"]
            periodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  name: redis
  labels:
    app.kubernetes.io/name: redis
spec:
  type: ClusterIP
  ipFamilyPolicy: PreferDualStack
  selector:
    app.kubernetes.io/name: redis
  ports:
    - name: redis
      port: 6379
      targetPort: redis
      protocol: TCP
